implemented category apis backend
