# backend/src/main/java/at/ltb/apprenticedeliverysystem/core/category/dto/CategoryOverviewDTO.java
@@ -1,0 +1,6 @@
+package at.ltb.apprenticedeliverysystem.core.category.dto;
+
+import at.ltb.apprenticedeliverysystem.core._common.response.BaseResponse;
+
+public record CategoryOverviewDTO(String id, String name, String description) implements BaseResponse
+{ }
